--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <div class="gyro-wrap">
   <div class="gyro-card" id="card">
     <div class="avatar-ring">
-      <img src="assets/abrarr.png" alt="Constant Abrar">
+      <img src="assets/Abrarr.png" alt="Constant Abrar">
     </div>
 
     <div class="info">
