Update index.html perfectly

--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
     <div class="menu-overlay" id="menuOverlay">
         <div class="menu-content">
             <ul class="mobile-links">
-                <li><a href="#about" class="mobile-link">About</a></li>
-                <li><a href="#services" class="mobile-link">Some Tools</a></li>
+                <li><a href="/About/" class="mobile-link">About</a></li>
+                <li><a href="/Tools/" class="mobile-link">All Tools</a></li>
             
-                <li><a href="#features" class="mobile-link">Technology</a></li>
-               <li><a href="#faq" class="mobile-link">FAQ</a></li>
+                <li><a href="/Cookies/" class="mobile-link">Cookies</a></li>
+               <li><a href="/Terns/" class="mobile-link">T & C</a></li>
                 <li><a href="#legal" class="mobile-link">Legal Center</a></li>
             </ul>
             <div class="menu-footer">
                 <p>Genuine Intelligence 28</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/const.abrar/" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://x.com/Const_Abrar" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/constabrar" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -209,7 +209,7 @@
 <div class="gyro-wrap">
   <div class="gyro-card" id="card">
     <div class="avatar-ring">
-      <img src="assets/Abrarr.png" alt="Constant Abrar">
+      <img src="assets/abrarr.png" alt="Constant Abrar">
     </div>
 
     <div class="info">
@@ -698,7 +698,7 @@ The tool works fully in the browser and lets you download QR codes in high resol
                 <p>&copy; 2026 Genuine Intelligence 28. All Rights Reserved.</p>
                 <div class="footer-bottom-links">
                    <a href="https://wa.me/918637213741">Whatsapp</a>
-<a href="https://instagram.com/const.abrar">Cookies</a>
+<a href="https://instagram.com/const.abrar">Instagram</a>
 
                 </div>
             </div>
