--- a/Tools/index.html
+++ b/Tools/index.html
@@ -300,8 +300,8 @@
         <ul class="menu-links">
             <li><a href="https://gi28.in/">Home</a></li>
             <li><a href="https://gi28.in/Tools/" style="color:white; border-bottom: 2px solid var(--c-cyan);">Tools</a></li>
-            <li><a href="https://gi28.in/about/">About</a></li>
-            <li><a href="https://gi28.in/contact/">Contact</a></li>
+            <li><a href="https://gi28.in/About/">About</a></li>
+            <li><a href="https://gi28.in/Contact/">Contact</a></li>
         </ul>
     </div>
 
@@ -327,7 +327,7 @@
                 </div>
             </a>
 
-            <a href="/Link-Creator/" class="tool-card reveal-text" data-tilt>
+            <a href="https://gi28.in/Tools/Link-Creator/" class="tool-card reveal-text" data-tilt>
                 <div class="tool-badge">FREE</div>
                 <div class="screw bl"></div><div class="screw br"></div>
                 <div class="card-visual">
