--- a/About/index.html
+++ b/About/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>About GI28 – Web Tools Engine by Constant Abrar | Developer Portfolio</title>
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="description" content="GI28 is a performance-driven web tools platform built by Constant Abrar. Explore modern digital utilities and hire for custom web development projects.">
 
 <meta name="keywords" content="About GI28, GI28 mission, GI28 tools, Constant Abrar developer, GI28 web tools, hire web developer India, modern UI developer, custom web tools">
