--- a/Contact/index.html
+++ b/Contact/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&family=Rajdhani:wght@400;600;700&family=Space+Grotesk:wght@300;600&display=swap" rel="stylesheet">
-    
+    <meta name="google-adsense-account" content="ca-pub-2879345966946573">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Contact Constant Abrar – Hire Web Developer | GI28</title>
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large">
@@ -542,7 +542,7 @@
                     <span class="stat-label">Message Accept</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-num">5+</span>
+                    <span class="stat-num">2+</span>
                     <span class="stat-label">Website Built</span>
                 </div>
             </div>
@@ -563,7 +563,7 @@
             </div>
 
             <form id="contactForm">
-                <input type="hidden" name="access_key" value="3d78cc0c-876c-4736-8484-5c09534ef4e6">
+                <input type="hidden" name="access_key" value="c157a982-9d96-489b-9657-5ef4124bf760">
                 <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
                 <div class="input-group">
