--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
+    <meta name="google-adsense-account" content="ca-pub-2879345966946573">
     <title>Genuine Intelligence 28 | Premium Useful Tools by CONSTANT ABRAR</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="assets/gi28-logo.png" type="image/x-icon">
@@ -185,7 +185,7 @@
                         <span class="text-gradient">Genuine Intelligence 28</span>
                     </h1>
                     <p class="hero-subtitle">
-                        An enterprise-grade ecosystem for Daily life explorers, growth automation and secure engagement. Powered by neural networks, designed for Abrar.
+                        An enterprise-grade ecosystem for Daily life explorers, growth automation and secure engagement. Powered by neural networks, designed & Developed by Constant Abrar.
                     </p>
                     <div class="hero-cta-group">
                         <a href="/Tools/" class="btn btn-glow">
