--- a/Cookies/index.html
+++ b/Cookies/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Read the official Privacy Policy and Cookies Policy of GI28, operated by Constant Abrar. Learn how we collect, use and protect personal data across our web tools and contact forms.">
 
 <meta name="keywords" content="GI28 privacy policy, GI28 cookies policy, Constant Abrar data protection, web tools privacy policy India, GDPR CCPA compliance website">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="author" content="Constant Abrar">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 <meta name="googlebot" content="index, follow">
