--- a/Terms/index.html
+++ b/Terms/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service | GI28 System - Genuine Intelligence 28</title>
-
+    <meta name="google-adsense-account" content="ca-pub-2879345966946573">
     <!-- Primary SEO -->
     <meta name="description" content="Read the official Terms of Service for GI28 System (Genuine Intelligence 28). Understand user responsibilities, data policies, limitations, and service conditions.">
     <meta name="keywords" content="GI28 Terms, GI28 System, Genuine Intelligence 28, Terms of Service, User Agreement, Legal Policy">
