--- a/Tools/Aether/index.html
+++ b/Tools/Aether/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <title>AETHER – Real-Time Particle Simulation Engine | GI28 Ultimate</title>
 
 <meta name="description" content="AETHER by GI28 is a high-fidelity real-time particle simulation engine. Convert text, images, video, or webcam input into interactive particle art. Export PNG & record sessions instantly.">
