--- a/Tools/index.html
+++ b/Tools/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <title>GI28 Tools – Free Username Checker, QR Code Generator & Profile Card Maker</title>
 
 <meta name="description" content="GI28 Tools offers free username checker, QR code generator, profile card maker & powerful online utilities. No login. No watermark. Fast, secure & mobile optimized.">
