--- a/Tools/Chronos/index.html
+++ b/Tools/Chronos/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>GI28 Chronos – Free Age & Date Difference Calculator</title>
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="description" content="GI28 Chronos is an advanced temporal calculator. Instantly calculate age, date difference, duration between two dates, and total days with precision. Free online tool.">
 <meta name="keywords" content="Age Calculator, Date Difference Calculator, Duration Calculator, Days Between Dates, Chronos Tool, GI28 Tools India">
 <meta name="author" content="Genuine Intelligence 28">
