--- a/Tools/Decoder/index.html
+++ b/Tools/Decoder/index.html
@@ -6,7 +6,7 @@
   <title>Universal Decoder Tool – Base64, Binary, Morse, Hex & Cipher | GI28 Omni-Decoder</title>
 
 <meta name="description" content="GI28 Omni-Decoder is a powerful universal decoder tool. Instantly decode Base64, Binary, Hexadecimal, Morse Code, ROT13, Caesar cipher, Unicode fonts and more. Free online cryptography analysis tool.">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="keywords" content="universal decoder, base64 decoder, binary to text, morse code translator, hex to text converter, rot13 decoder, caesar cipher decoder, unicode normalizer, cipher decoder online, cryptography tool">
 
 <meta name="author" content="Constant Abrar">
