--- a/Tools/Encoder/index.html
+++ b/Tools/Encoder/index.html
@@ -6,7 +6,7 @@
   <title>Fancy Text, Unicode Fonts & Cipher Generator – GI28 Ultimate Engine</title>
 
 <meta name="description" content="GI28 Ultimate Engine is an all-in-one fancy text generator, Unicode font converter, glitch text creator and cipher encryption tool. Generate stylish fonts, Zalgo text, Base64, Binary, Morse and more instantly.">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="keywords" content="fancy text generator, unicode font generator, glitch text generator, zalgo text generator, cipher generator, base64 encoder, binary converter, morse code translator, stylish text copy paste, text encryption tool">
 
 <meta name="author" content="Constant Abrar">
