--- a/Tools/I-Profile-QR-Generator/index.html
+++ b/Tools/I-Profile-QR-Generator/index.html
@@ -6,7 +6,7 @@
   <title>Insta Profile QR Generator – High Resolution Instagram QR Code Tool | GI28</title>
 
 <meta name="description" content="Insta Profile QR Generator by GI28 lets you create high-resolution Instagram QR codes with custom colors, gradients and shapes. Download PNG up to 2000px instantly.">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="keywords" content="insta profile qr generator, instagram qr code generator, custom instagram qr code, qr code png download, high resolution qr code maker, instagram username qr">
 
 <meta name="author" content="Constant Abrar">
