--- a/Tools/Unicode-Engine/index.html
+++ b/Tools/Unicode-Engine/index.html
@@ -6,7 +6,7 @@
     <title>GI28 Unicode Engine – Fancy Text & Unicode Font Generator (Copy & Paste)</title>
 
 <meta name="description" content="GI28 Unicode Engine is a powerful fancy text and Unicode font generator. Convert normal text into stylish fonts for Instagram, WhatsApp, Facebook, gaming names and more. 100+ copy-paste styles.">
-
+<meta name="google-adsense-account" content="ca-pub-2879345966946573">
 <meta name="keywords" content="unicode font generator, fancy text generator, stylish text copy paste, instagram font changer, cool fonts online, text converter unicode, gaming name generator, copy paste fonts tool">
 
 <meta name="author" content="Constant Abrar">
